@@ -53,6 +53,13 @@ extern char	*log_archive_path;
 extern char     *auth_file;
 extern char	*p1_file;
 
+extern char *xodtemplate_cache_file;
+extern char *xodtemplate_precache_file;
+extern char *xsddefault_status_log;
+extern char *xrddefault_retention_file;
+extern char *xpddefault_host_perfdata_file;
+extern char *xpddefault_service_perfdata_file;
+
 extern char     *nagios_user;
 extern char     *nagios_group;
 
@@ -282,6 +289,8 @@ extern int errno;
 #endif
 
 
+void handle_sigxfsz(int);
+long long check_file_size(char *, unsigned long, struct rlimit);
 
 /******************************************************************/
 /******************** SYSTEM COMMAND FUNCTIONS ********************/
@@ -1782,6 +1791,7 @@ void setup_sighandler(void) {
 	signal(SIGQUIT, sighandler);
 	signal(SIGTERM, sighandler);
 	signal(SIGHUP, sighandler);
+	signal(SIGXFSZ, handle_sigxfsz);
 	if(daemon_dumps_core == FALSE && daemon_mode == TRUE)
 		signal(SIGSEGV, sighandler);
 
@@ -1798,6 +1808,7 @@ void reset_sighandler(void) {
 	signal(SIGHUP, SIG_DFL);
 	signal(SIGSEGV, SIG_DFL);
 	signal(SIGPIPE, SIG_DFL);
+	signal(SIGXFSZ, SIG_DFL);
 
 	return;
 	}
@@ -1838,6 +1849,126 @@ void sighandler(int sig) {
 	return;
 	}
 
+/* Handle the SIGXFSZ signal. A SIGXFSZ signal is received when a file exceeds
+	the maximum allowable size either as dictated by the fzise paramater in
+	/etc/security/limits.conf (ulimit -f) or by the maximum size allowed by
+	the filesystem */
+void handle_sigxfsz(int sig) {
+
+	static time_t lastlog_time = (time_t)0;	/* Save the last log time so we 
+											   don't log too often. */
+	unsigned long log_interval = 300;		/* How frequently to log messages
+											   about receiving the signal */
+	struct rlimit rlim;
+	time_t now;
+	char *files[] = {
+		log_file,
+		debug_file,
+		xpddefault_host_perfdata_file,
+		xpddefault_service_perfdata_file,
+		xodtemplate_cache_file,
+		xodtemplate_precache_file,
+		xsddefault_status_log,
+		xrddefault_retention_file,
+		};
+	int x;
+	char **filep;
+	long long size;
+	long long max_size = 0LL;
+	char *max_name = NULL;
+
+	if(SIGXFSZ == sig) {	/* Make sure we're handling the correct signal */
+		/* Check the current time and if less time has passed since the last
+			time the signal was received, ignore it */
+		time(&now);
+		if((unsigned long)(now - lastlog_time) < log_interval) return;
+
+		/* Get the current file size limit */
+		if(getrlimit(RLIMIT_FSIZE, &rlim) != 0) {
+			/* Attempt to log the error, realizing that the logging may fail
+				if it is the log file that is over the size limit. */
+			logit(NSLOG_RUNTIME_ERROR, TRUE, 
+					"Unable to determine current resoure limits: %s\n", 
+					strerror(errno));
+			}
+
+		/* Try to figure out which file caused the signal and react 
+				appropriately */
+		for(x = 0, filep = files; x < (sizeof(files) / sizeof(files[0])); 
+				x++, filep++) {
+			if((*filep != NULL) && strcmp(*filep, "/dev/null")) {
+				if((size = check_file_size(*filep, 1024, rlim)) == -1) {
+					lastlog_time = now;
+					return;
+					}
+				else if(size > max_size) {
+					max_size = size;
+					max_name = log_file;
+					}
+				}
+			}
+		/* TODO: Perhaps add check of the check results files in 
+			check_results_path. This is likely not needed because these 
+			files aren't very big */
+		if((max_size > 0) && (max_name != NULL)) {
+			logit(NSLOG_RUNTIME_ERROR, TRUE, "SIGXFSZ received because a "
+					"file's size may have exceeded the file size limits of "
+					"the filesystem. The largest file checked, '%s', has a "
+					"size of %lld bytes", max_name, max_size);
+			
+			}
+		else {
+			logit(NSLOG_RUNTIME_ERROR, TRUE, "SIGXFSZ received but unable to "
+					"determine which file may have caused it.");
+			}
+		}
+	return;
+	}
+
+/* Checks a file to determine whether it exceeds resource limit imposed
+	limits. Returns the file size if file is OK, 0 if it's status could not 
+	be determined, or -1 if not OK. fudge is the fudge factor (in bytes) for 
+	checking the file size */
+long long check_file_size(char *path, unsigned long fudge, struct rlimit rlim) {
+
+	struct stat status;
+
+	/* Make sure we were passed a legitimate file path */
+	if(NULL == path) {
+		return 0;
+		}
+
+	/* Get the status of the file */
+	if(stat(path, &status) == 0) {
+		/* Make sure it is a file */
+		if(S_ISREG(status.st_mode)) {
+			/* If the file size plus the fudge factor exceeds the 
+				current resource limit imposed size limit, log an error */
+			if(status.st_size + fudge > rlim.rlim_cur) {
+				logit(NSLOG_RUNTIME_ERROR, TRUE, "Size of file '%s' (%llu) "
+						"exceeds (or nearly exceeds) size imposed by resource "
+						"limits (%llu). Consider increasing limits with "
+						"ulimit(1).\n", path, 
+						(unsigned long long)status.st_size, 
+						(unsigned long long)rlim.rlim_cur);
+				return -1;
+				}
+			else {
+				return status.st_size;
+				}
+			}
+		else {
+			return 0;
+			}
+		}
+	else {
+		/* If we could not determine the file status, log an error message */
+		logit(NSLOG_RUNTIME_ERROR, TRUE, 
+				"Unable to determine status of file %s: %s\n", 
+				log_file, strerror(errno));
+		return 0;
+		}
+	}
 
 /* handle timeouts when executing service checks */
 /* 07/16/08 EG also called when parent process gets a TERM signal */
